--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
     "json:server": "json-server --watch data.json"
   },
   "keywords": [],
@@ -13,7 +13,11 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.1",
     "json-server": "^0.16.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
